2012-01-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix for the "timecodes_v2" mode: mkvextract will
	write one more timecode than there are frames in the file. The
	last timecode written will be the the sum of the last frame's
	timecode and duration with the "last frame" being the one with the
	highest timecode. Fix for bug 691.

2012-01-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed writing into paths on which a drive is
	mounted on Windows. Fix for bug 701.

	* mkvmerge: enhancement: Identification output for Matroska files:
	Added the track number header field as "number" to the verbose
	identification mode.

2012-01-09  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Identification output for Matroska files:
	Added a field "content_encoding_algorithms" that contains a
	comma-separated list of encoding algorithm IDs used for that
	track. For example, "content_encoding_algorithms:3" would indicate
	that header removal compression is used.

2012-01-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Identification output for Matroska files:
	Added several fields to mkvmerge's verbose identification mode for
	tracks: UID, CodecID, length and content (as a hex dump) of the
	codec private data.

	* mkvmerge: bug fix: Fixed a segmentation fault in the DTS
	detection code. Fix for bug 698.

2012-01-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: The track IDs used in the "timecodes_v2"
	extraction mode are consistent again with the IDs that mkvmerge's
	identification reports and that mkvextract's "tracks" extraction
	mode uses. Fix for bugs 689 and 694.

2012-01-04  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Added video pixel dimensions to the
	output of "--identify-verbose" for Matroska files.

2012-01-02  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.2.1.

2011-12-29  Moritz Bunkus  <moritz@bunkus.org>
