@@ -24,13 +24,11 @@ using namespace libmatroska;
 
 dts_packetizer_c::dts_packetizer_c(generic_reader_c *p_reader,
                                    track_info_c &p_ti,
-                                   const dts_header_t &dtsheader,
-                                   bool get_first_header_later)
+                                   const dts_header_t &dtsheader)
   : generic_packetizer_c(p_reader, p_ti)
   , m_samples_written(0)
   , m_bytes_written(0)
   , m_packet_buffer(128 * 1024)
-  , m_get_first_header_later(get_first_header_later)
   , m_first_header(dtsheader)
   , m_previous_header(dtsheader)
   , m_skipping_is_normal(false)
@@ -63,21 +61,10 @@ dts_packetizer_c::get_dts_packet(dts_header_t &dtsheader) {
     buf_size = m_packet_buffer.get_size();
   }
 
-  pos = find_dts_header(buf, buf_size, &dtsheader, m_get_first_header_later ? false : !m_first_header.dts_hd);
+  pos = find_dts_header(buf, buf_size, &dtsheader, !m_first_header.dts_hd);
 
   if ((0 > pos) || (static_cast<int>(pos + dtsheader.frame_byte_size) > buf_size))
     return NULL;
-
-  if (m_get_first_header_later) {
-    m_first_header           = dtsheader;
-    m_previous_header        = dtsheader;
-    m_get_first_header_later = false;
-
-    if (!m_reader->m_appending)
-      set_headers();
-
-    rerender_track_headers();
-  }
 
   if ((1 < verbose) && (dtsheader != m_previous_header)) {
     mxinfo(Y("DTS header information changed! - New format:\n"));
@@ -155,9 +142,6 @@ dts_packetizer_c::can_connect_to(generic_packetizer_c *src,
   dts_packetizer_c *dsrc = dynamic_cast<dts_packetizer_c *>(src);
   if (NULL == dsrc)
     return CAN_CONNECT_NO_FORMAT;
-
-  if (m_get_first_header_later)
-    return CAN_CONNECT_MAYBE_CODECPRIVATE;
 
   connect_check_a_samplerate(m_first_header.core_sampling_frequency, dsrc->m_first_header.core_sampling_frequency);
   connect_check_a_channels(m_first_header.audio_channels, dsrc->m_first_header.audio_channels);
